Nginx Service : trying to use 443 and SSL

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,15 +1,17 @@
 FROM debian:buster
 
-COPY About.html /var/www/html/index.html
-
-COPY Style.css /var/www/html/
-
 RUN apt-get update
 
 RUN apt-get upgrade -y
 
 RUN apt-get install -y nginx
 
-COPY conf/nginx.conf /etc/nginx/
+COPY conf/nginx.conf /etc/nginx
+
+# COPY tools/index.html /var/www/html/index.html
+
+# COPY tools/Style.css /var/www/html/
+
+EXPOSE 80
 
 CMD [ "nginx", "-g", "daemon off;" ]
