--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -63,10 +63,10 @@ http {
 
 		server 
 		{
-			listen 80;
+			listen 443 ssl;
 
 			root /var/www/html;
-			index About.html;
+			index index.html;
 
 			location / {
 				try_files $uri $uri/ =404;
