. Nginx Service :     + SSL generated and used.     + Exposing port 443.
    - Forbidden or bad request problem.
    - fastcgi wordpress service.

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,12 +6,12 @@ RUN apt-get upgrade -y
 
 RUN apt-get install -y nginx
 
+RUN apt-get install -y openssl
+
 COPY conf/nginx.conf /etc/nginx
 
-# COPY tools/index.html /var/www/html/index.html
+COPY tools/script.sh /
 
-# COPY tools/Style.css /var/www/html/
+EXPOSE 443
 
-EXPOSE 80
-
-CMD [ "nginx", "-g", "daemon off;" ]
+CMD [ "bash", "script.sh" ]
