--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -64,13 +64,43 @@ http {
 		server 
 		{
 			listen 443 ssl;
+			listen [::]:443 ssl;
 
 			root /var/www/html;
 			index index.html;
+			server_name	www.mbenbajj.1337.ma;
 
-			location / {
-				try_files $uri $uri/ =404;
-			}
+			ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    		ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    		ssl_protocols TLSv1.3;
+
+			location ~ [^/]\.php(/|$) { 
+				# try_files $uri =404;
+				# fastcgi_pass wordpress:9000;
+				# include fastcgi_params;
+				# fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+				index index.html;
+        	}
 		}
 
 }
+
+
+# server {
+#     listen 443 ssl http2;
+#     server_name example.com;
+
+#     ssl_certificate /path/to/cert.pem;
+#     ssl_certificate_key /path/to/key.pem;
+#     ssl_protocols TLSv1.3;
+#     ssl_prefer_server_ciphers off;
+
+#     # Additional SSL/TLS settings
+#     # ...
+
+#     location / {
+#         # Configure how requests are handled
+#         # ...
+#     }
+# }
+
