--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster
+FROM debian:bullseye
 
 RUN apt-get update
 
@@ -8,7 +8,7 @@ RUN apt-get install -y nginx
 
 RUN apt-get install -y openssl
 
-COPY conf/nginx.conf /etc/nginx
+COPY tools/nginx.conf /etc/nginx
 
 COPY tools/script.sh /
 
