--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -60,29 +60,7 @@ http {
 
         # include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
-
-		server 
-		{
-			listen 443 ssl;
-			listen [::]:443 ssl;
-
-			root /var/www/html;
-			index index.html;
-			server_name	www.mbenbajj.1337.ma;
-
-			ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    		ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-    		ssl_protocols TLSv1.3;
-
-			location ~ [^/]\.php(/|$) { 
-				# try_files $uri =404;
-				# fastcgi_pass wordpress:9000;
-				# include fastcgi_params;
-				# fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-				index index.html;
-        	}
-		}
-
+		include /etc/nginx/sites-available/wordpress;
 }
 
 
