Trying more with maridb

--- a/srcs/.env
+++ b/srcs/.env
@@ -10,3 +10,8 @@ CERTIF=/etc/ssl/certs/nginx-selfsigned.crt
 # ------------------
 # MARIADB VARIABLES
 # ------------------
+
+M_DB_NAME=wordpress
+M_ROOT_PASS=root@pass123
+M_USER_NAME=mbenbajj
+M_USER_PASS=mbenbajj@pass123
