--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,13 @@
 FROM debian:bullseye
 
-RUN apt-get update
+RUN apt update
 
-RUN apt-get upgrade -y
+RUN apt upgrade -y
 
-RUN apt-get install -y mariadb-server
+RUN apt install -y mariadb-server
 
-COPY /tools/script.sh	/
+COPY /tools/maria.sql	/var
 
-CMD [ "bash", "script.sh" ]
+COPY /tools/script.sh	/var
+
+CMD [ "bash", "/var/script.sh" ]
