--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,8 +1,15 @@
 FROM debian:bullseye
 
+WORKDIR /mount
+
 RUN apt update
 
 RUN apt upgrade -y
 
-RUN apt install php-fpm
+RUN apt install php-fpm -y
 
+RUN apt install curl -y
+
+EXPOSE 9000
+
+CMD [ "tail", "-f" ]
