--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -4,10 +4,10 @@ RUN apt-get update
 
 RUN apt-get upgrade -y
 
-RUN apt install mariadb-server -y
+# RUN apt install mariadb-server -y
 
-COPY maria.sql /var
+# COPY maria.sql /var
 
-COPY script.sh /var
+# COPY script.sh /var
 
-CMD ["bash", "/var/script.sh"]
+CMD ["tail", "-f"]
