WordPress Service : 	- download - install. 	- Configure Wordpress Port --Required. 	- Configure MariadB Port --Done.

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@
 # NGINX VARIABLES
 # ------------------
 
-DOMAINE_NAME=mbenbajj.1337.ma
+DOMAINE_NAME=localhost
 KEY=/etc/ssl/private/nginx-selfsigned.key
 CERTIF=/etc/ssl/certs/nginx-selfsigned.crt
 
@@ -15,3 +15,17 @@ M_DB_NAME=wordpress
 M_ROOT_PASS=root@pass123
 M_USER_NAME=mbenbajj
 M_USER_PASS=mbenbajj@pass123
+
+# --------------------
+# WORDPRESS VARIABLES
+# --------------------
+
+W_TITLE=MyWeb
+W_ADMIN_U=mbenbajj
+W_ADMIN_P=mbenbajj@pass123
+W_ADMIN_E=mbenbajj@student.1337.ma
+W_DB_HOST=c_mariadb
+
+ROLE=editor
+USER_N=marben
+USER_P=marben@pass123
