--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -8,8 +8,12 @@ RUN apt install curl php-cli php-mysql -y
 
 RUN apt install mariadb-client -y
 
+RUN apt install -y php-fpm
+
+RUN mkdir /run/php
+
 COPY tools/script.sh /tmp
 
 ENTRYPOINT [ "bash", "/tmp/script.sh" ]
 
-CMD [ "tail", "-f" ]
+CMD [ "php-fpm7.4", "-F" ]
