Use Docker Compose

--- a/srcs/.env
+++ b/srcs/.env
@@ -24,7 +24,7 @@ W_TITLE=MyWeb
 W_ADMIN_U=mbenbajj
 W_ADMIN_P=mbenbajj@pass123
 W_ADMIN_E=mbenbajj@student.1337.ma
-W_DB_HOST=c_mariadb
+W_DB_HOST=mariadb
 
 ROLE=editor
 USER_N=marben
