Makefile Doesn't Work

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,6 +9,7 @@ volumes:
 
 services:
   mariadb:
+    image: mariadb
     build: ./requirements/mariadb/
     container_name: mariadb
     env_file:
@@ -19,6 +20,7 @@ services:
       - inception
     restart: always
   wordpress:
+    image: wordpress
     build: ./requirements/wordpress/
     container_name: wordpress
     env_file:
@@ -31,6 +33,7 @@ services:
       - mariadb
     restart: always
   nginx:
+    image: nginx
     build: ./requirements/nginx/
     container_name: nginx
     env_file:
