--- a/srcs/.env
+++ b/srcs/.env
@@ -30,3 +30,10 @@ ROLE=editor
 USER_N=marben
 USER_P=marben@pass123
 EMAIL=marben@test.com
+
+# -----------------
+# BONUS VARIABLES
+# -----------------
+
+REDIS_HOST=redis
+REDIS_PORT=6379
