--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -58,3 +58,14 @@ services:
     networks:
       - inception
     restart: always
+  adminer:
+    image: adminer
+    build: ./requirements/bonus/adminer
+    container_name: adminer
+    ports:
+      - '8080:8080'
+    networks:
+      - inception
+    depends_on:
+      - mariadb
+    restart: always
