--- a/srcs/requirements/bonus/static/Dockerfile
+++ b/srcs/requirements/bonus/static/Dockerfile
@@ -6,4 +6,6 @@ RUN apt-get install nginx -y
 
 COPY tools/index.html /var/www/html/index.html
 
+COPY tools/Style.css /var/www/html
+
 CMD [ "nginx" , "-g" , "daemon off;" ]
