--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     build: ./requirements/bonus/adminer
     container_name: adminer
     ports:
-      - '8080:8080'
+      - '8081:8081'
     networks:
       - inception
     depends_on:
@@ -78,3 +78,19 @@ services:
     networks:
       - inception
     restart: always
+  cadvisor:
+    image: cadvisor:mbenbajj
+    build: ./requirements/bonus/cadvisor
+    container_name: cadvisor
+    ports:
+      - '8080:8080'
+    networks:
+      - inception
+    restart: always
+    depends_on:
+      - mariadb
+      - wordpress
+      - nginx
+      - redis
+      - static
+      - adminer
