- Makefile :     + Using HOME variable to create bind mount locations. - Docker-Compose :     + adding bind mounts.     + adding ftp port and volume. - FTP Service :     + running ....

--- a/srcs/.env
+++ b/srcs/.env
@@ -37,3 +37,10 @@ EMAIL=marben@test.com
 
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# -----------------
+# BONUS VARIABLES
+# -----------------
+
+USER_FTP=mar
+PWD_FTP=ben
